docs(k3s): update quickstart documentation

--- a/docs/modules/ROOT/partials/k3s_kubeconfig_keycloak.adoc
+++ b/docs/modules/ROOT/partials/k3s_kubeconfig_keycloak.adoc
@@ -3,7 +3,8 @@
 Retrieve the Kubeconfig file:
 
 ```shell
-$ terraform output -json kubeconfig | jq -r .
+$ terraform output -json kubeconfig | jq -r . > kubeconfig.yaml
+$ export KUBECONFIG=kubeconfig.yaml
 ```
 
 
